Fix extended TS type in computed field example
Not sure if my TypeScript is rusty here but when I tried to use this generic type example in TypeScript 5.3.2, the resulting dynamic type didn't return a union of the supplied type (User) and the extended fields but instead only returned the extended fields (fullName). 

So it returned an intersection instead of a union which seems like the appropriate thing to do here.

--- a/content/200-concepts/100-components/02-prisma-client/062-computed-fields.mdx
+++ b/content/200-concepts/100-components/02-prisma-client/062-computed-fields.mdx
@@ -119,7 +119,7 @@ type FirstLastName = {
 }
 
 // Extend the T generic with the fullName attribute
-type WithFullName<T> = T & {
+type WithFullName<T> = T | {
   fullName: string
 }
 
